# RumbleRoom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MEMORIES.md  RumbleRoom_Installer.iss
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/UI/: BoutiqueKnobHelpers.cpp  BoutiqueKnobHelpers.h  BoutiqueLayoutConstants.h  BoutiqueLookAndFeel.cpp  BoutiqueLookAndFeel.h  ChromeTextButton.cpp  ChromeTextButton.h  HydraPalette.h  HydraPanelBackgroundLayout.cpp  HydraPanelBackgroundLayout.h  ProceduralDarkLookAndFeel.cpp  ProceduralDarkLookAndFeel.h
Tests/: PluginTests.cpp
